@@ -6,7 +6,6 @@ import com.hust.soict.ict.aims.models.entities.product.Track;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CDUpdater implements ProductUpdater<CD, UpdateCDRequest> {
@@ -17,14 +16,16 @@ public class CDUpdater implements ProductUpdater<CD, UpdateCDRequest> {
 
     @Override
     public CD updateFrom(CD existingProduct, UpdateCDRequest updateRequest) {
-        List< Track > cdTracks = updateRequest.getTracks() == null ? List.of() : updateRequest.getTracks().stream()
-                .map(t -> new Track(t.getTitle(), t.getLength())).collect(Collectors.toList());
-        
-        return populateCommonFields(new CD.Builder(existingProduct), updateRequest)
+        List<Track> tracks = updateRequest.getTracks() == null ?
+                null : updateRequest.getTracks().stream()
+                .map(t -> new Track(t.getTitle(), t.getLength()))
+                .toList();
+
+        return buildCommonFields(existingProduct.toBuilder(), updateRequest)
                 .genre(updateRequest.getGenre())
                 .artists(updateRequest.getArtists())
                 .recordLabel(updateRequest.getRecordLabel())
-                .tracks(cdTracks)
+                .tracks(tracks)
                 .build();
     }
 }
